manifests/deployment.yaml
# eks fargate deployment manifest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-fe
  namespace: eks-fargate-fe
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eks-fe
  template:
    metadata:
      labels:
        app: eks-fe
    spec:
      containers:
        - name: eks-fe
          image: 767398032512.dkr.ecr.us-east-1.amazonaws.com/eks-app/fe:latest
          ports:
            - containerPort: 3000
