manifests/ingress.yaml
# eks ecr fargate ingress manifest open to the public internet
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-fe-ingress
  namespace: eks-fargate-fe
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: eks-fe.example.com
      http:
        paths:
