manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ms-to-fe
  namespace: eks-fargate-fe
spec:
  podSelector:
    matchLabels:
      app: eks-fe
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: eks-fargate-ms
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
